--- a/trunk/GCNav/SurfaceWindow1.xaml
+++ b/trunk/GCNav/SurfaceWindow1.xaml
@@ -27,6 +27,7 @@
         <Grid Background="#24524A" >
         <Canvas VerticalAlignment="Top" HorizontalAlignment="Left" Height="325.25" Width="576.35" Canvas.Top="10">
             <m:newMap x:Name="Map" Height="355.25" Width="576.35" />
+         <!--   <m:FilterTimelineBox x:Name="filter" Width="300" Visibility="Hidden"/> -->
         </Canvas>
         <m:Navigator x:Name="nav" />
 
