--- a/trunk/GCNav/newMap.xaml
+++ b/trunk/GCNav/newMap.xaml
@@ -43,9 +43,17 @@
                 <Image x:Name="blur" Height="328" Width="576.35" Canvas.Left="0" Canvas.Top="0" HorizontalAlignment="Left" IsHitTestVisible="False" VerticalAlignment="Top"/>
             </Canvas>
             
-            
-            
+            <TextBlock x:Name="infoLabel" Width="400" Height="40" FontSize="18" Foreground="White" VerticalAlignment="Bottom" Canvas.Left="88" TextAlignment="Center"><!--Will have a background for the text-->
+                <!--<TextBlock.Effect>
+                    <DropShadowEffect ShadowDepth="10" Direction="315" Color="Black"  Opacity="1" BlurRadius="0.0" />
+                </TextBlock.Effect>-->
+                <!--<TextBlock.RenderTransform>
+                <TranslateTransform X="2.5" Y="2.5" />
+                </TextBlock.RenderTransform>-->
+            </TextBlock>
+            <!--<TextBlock  x:Name="infoLabel1" Width="500" Height="40" FontSize="18" Foreground="White" VerticalAlignment="Bottom" HorizontalAlignment="Center">
+            </TextBlock>-->
         </Canvas>
-        <Label x:Name="infoLabel" Width="500" Height="40" FontSize="18" Foreground="White" VerticalAlignment="Bottom" Canvas.Bottom="0"/>
+       
     </Grid>
 </UserControl>
